[FEAT] 유저의 컨설팅 요구사항 가져오기 API 구현
