# src/controllers/consult.controller.js
@@ -1,7 +1,7 @@
 // consult.controller.js
 import { response } from "../../config/response.js";
 import { status } from "../../config/response.status.js";
-import { addHouseSize, addMood, addRoomNumber, addConcern, addStatus } from "../services/consult.service.js";
+import { addHouseSize, addMood, addRoomNumber, addConcern, addStatus, getConsultRequest } from "../services/consult.service.js";
 
 export const houseSizeAdd = async (req, res, next) => {
     try {
@@ -47,6 +47,16 @@ export const concernAdd= async(req,res,next)=>{
     try{
         console.log("body",req.body);
         const result=await addConcern(req.body);
+        res.send(response(status.SUCCESS,result));
+    }catch(error){
+        next(error);
+    }
+}
+
+export const consultRequestGet=async(req,res,next)=>{
+    try{
+        console.log("params",req.params);
+        const result=await getConsultRequest(req.params.consulting_id);
         res.send(response(status.SUCCESS,result));
     }catch(error){
         next(error);
